@@ -1,6 +1,9 @@
 
 Version X.X (XXXX-XX-XX)
 
+     New: Added a method to set the preferred visible row count so that you can make the viewer default
+          to a larger (or smaller) size without having to calculate font sizes.
+
    Fixed: Fixed the font specified in the UI not taking effect.
 
  Changed: Changed the default font for Mac OS X to Monaco 13pt.
